# SeekAI

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/cxxopts/: cxxopts.hpp
src/object_detector/: CMakeLists.txt
src/object_detector/include/: RTSPcam.h  multithreading.h  object_detector.h
src/object_detector/src/: RTSPcam.cpp  multithreading.cpp  object.cpp
